--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_riverpod: ^1.0.4
   marquee_text: ^2.5.0+1
   flutter_neumorphic: ^3.2.0
+  just_audio: ^0.9.28
 
 dev_dependencies:
   flutter_test:
