--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   marquee_text: ^2.5.0+1
   flutter_neumorphic: ^3.2.0
   just_audio: ^0.9.28
+  just_audio_background: ^0.0.1-beta.7
 
 dev_dependencies:
   flutter_test:
