--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_neumorphic: ^3.2.0
   just_audio: ^0.9.28
   just_audio_background: ^0.0.1-beta.7
+  carousel_slider: ^4.1.1
 
 dev_dependencies:
   flutter_test:
